--- a/Project folder/HTML/booking.html
+++ b/Project folder/HTML/booking.html
@@ -115,6 +115,7 @@
         <tr>
             <td><button type="button" class="submit_button" id="submitBTN">BOOK NOW</button></td>
             <td><button type="button" class="favourites_button" id="toFavourites">ADD TO FAVOURITES</button></td>
+            <td><button type="button" class="loyalty_points" id="checkLoyaltyPonints">CHECK LOYALTY POINTS</button></td>
         </tr>
 
         <!-- Display booking information -->
